Changed favicon and search label

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <br />
     <h1>Search the Database:</h1>
     <br />
-    <h2>By text:</h2>
+    <h2>By keyword:</h2>
         <!--Search Stuff-->
         <form asp-action="Search" method="get">
             <input type="text" name="query" placeholder="Search MEI files">
