changed the title to "airs connus" and made the navbar title a home button

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - dayMelodySearch</title>
+    <title>airs connus</title>
     <link href="~/css/site.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -14,7 +14,12 @@
 </head>
 <body>
     <div class="navbar">
-        <h2>Comédie Vaudeville</h2>
+        <h1>
+            <a asp-area="" asp-controller="Home" asp-action="Index" style="color: white; text-decoration: none;">
+                airs connus
+            </a>
+        </h1>
+
     </div>
     <div class="container-fluid">
         <main role="main" class="pb-3">
