Added a text incipit search

--- a/Views/Home/DisplayFile.cshtml
+++ b/Views/Home/DisplayFile.cshtml
@@ -110,7 +110,7 @@
         // Extract metadata with consideration for attributes
         var metadata = {
             "Title(s)": extractMetadataTag(meiDoc, "title"),  // Regular title
-            "First Line": extractMetadataTag(meiDoc, "title by first line"),
+            "Text Incipit": extractMetadataTag(meiDoc, "incipText"),
             "Composer": extractMetadataTag(meiDoc, "composer"),
             "Librettist": extractMetadataTag(meiDoc, "librettist"),
             "Collection Editor": extractMetadataTag(meiDoc, "editor", "type", "collection"),
