--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -28,6 +28,14 @@
         <input type="text" name="query" placeholder="Search MEI files">
         <button type="submit">Search Composer</button>
     </form>
+    <br />
+    <h4>Search by text incipit only:</h4>
+    <!--SEARCH TEXT INCIPIT-->
+    <!--Search Stuff-->
+    <form asp-action="SearchIncipit" method="get">
+        <input type="text" name="query" placeholder="Search MEI files">
+        <button type="submit">Search Text Incipit</button>
+    </form>
 
 
 
