Added librettist search

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -29,6 +29,14 @@
         <button type="submit">Search Composer</button>
     </form>
     <br />
+    <h4>Search by librettist only:</h4>
+    <!--SEARCH LIBRETTIST-->
+    <!--Search Stuff-->
+    <form asp-action="SearchLibrettist" method="get">
+        <input type="text" name="query" placeholder="Search MEI files">
+        <button type="submit">Search Librettist</button>
+    </form>
+    <br />
     <h4>Search by text incipit only:</h4>
     <!--SEARCH TEXT INCIPIT-->
     <!--Search Stuff-->
