explanation of the sharps and flats on the keyboard

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -51,6 +51,7 @@
 <h2>By melody:</h2>
 <!--Keyboard interface:-->
     <div>
+        <p>Clicking the top half of the black keys will produce a sharp. Clicking the bottom half will produce a flat.</p>
         <div style="text-align: center;">
             <div style="display: inline-block; overflow-x: scroll; overflow-y: hidden;">
                 <table>
