Add a CdC number feild and a search by it.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -44,6 +44,15 @@
         <input type="text" name="query" placeholder="Search MEI files">
         <button type="submit">Search Text Incipit</button>
     </form>
+    <br />
+    <h4>Search by Cle du Caveau number only:</h4>
+    <p>Format needs to be 0000. For example, to get number 2, search '0002'.</p>
+    <!--SEARCH Cle du Caveau number-->
+    <!--Search Stuff-->
+    <form asp-action="SearchCdCNumber" method="get">
+        <input type="text" name="query" placeholder="Search MEI files">
+        <button type="submit">Search CdC Number</button>
+    </form>
 
 
 
