--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,21 +6,28 @@
     <title>airs connus</title>
     <link href="~/css/site.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!--This is what is making the css not work: -->
     <script src="https://www.verovio.org/javascript/latest/verovio-toolkit.js"></script>
 
     <script src="~/lib/jquery/dist/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <div class="navbar">
-        <h1>
+    <div class="navbar" style="position: relative; display: flex; align-items: center; height: 100px; padding: 0 20px;">
+        <!-- Home Icon on the left -->
+        <a asp-area="" asp-controller="Home" asp-action="Index" style="color: white; text-decoration: none; position: absolute; left: 20px;">
+            <i class="fas fa-home" style="font-size: 24px;"></i>
+        </a>
+
+        <!-- Centered Text -->
+        <h1 style="margin: 0; width: 100%; text-align: center;">
             <a asp-area="" asp-controller="Home" asp-action="Index" style="color: white; text-decoration: none;">
                 airs connus
             </a>
         </h1>
-
     </div>
+
+
     <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
