--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,8 @@
 
 <body>
     <br />
-    <h1>Search the Database:</h1>
+    <h2 style="color: slategrey;">
+        Search the Database:</h2n>
     <br />
     <h2>By keyword:</h2>
         <!--Search Stuff-->
@@ -13,15 +14,15 @@
             <button type="submit">Search</button>
         </form>
         <br />
-        <h4>Search by title only:</h4>
-        <!--SEARCH TITLE-->
+    <h2>Search by title only:</h2>
+    <!--SEARCH TITLE-->
     <!--Search Stuff-->
     <form asp-action="SearchTitle" method="get">
         <input type="text" name="query" placeholder="Search MEI files">
         <button type="submit">Search Title</button>
     </form>
     <br />
-    <h4>Search by composer only:</h4>
+    <h2>Search by composer only:</h2>
     <!--SEARCH COMPOSER-->
     <!--Search Stuff-->
     <form asp-action="SearchComposer" method="get">
@@ -29,7 +30,7 @@
         <button type="submit">Search Composer</button>
     </form>
     <br />
-    <h4>Search by librettist only:</h4>
+    <h2>Search by librettist only:</h2>
     <!--SEARCH LIBRETTIST-->
     <!--Search Stuff-->
     <form asp-action="SearchLibrettist" method="get">
@@ -37,7 +38,7 @@
         <button type="submit">Search Librettist</button>
     </form>
     <br />
-    <h4>Search by text incipit only:</h4>
+    <h2>Search by text incipit only:</h2>
     <!--SEARCH TEXT INCIPIT-->
     <!--Search Stuff-->
     <form asp-action="SearchIncipit" method="get">
@@ -45,7 +46,7 @@
         <button type="submit">Search Text Incipit</button>
     </form>
     <br />
-    <h4>Search by Cle du Caveau number only:</h4>
+    <h2>Search by Cle du Caveau number only:</h2>
     <p>Format needs to be 0000. For example, to get number 2, search '0002'.</p>
     <!--SEARCH Cle du Caveau number-->
     <!--Search Stuff-->
