changed title to the air connus index

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
         <!-- Centered Text -->
         <h1 style="margin: 0; width: 100%; text-align: center;">
             <a asp-area="" asp-controller="Home" asp-action="Index" style="color: white; text-decoration: none;">
-                airs connus
+                The <i>air connus</i> Index
             </a>
         </h1>
     </div>
