padding around the "back" button

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,6 +15,7 @@
         </form>
         <br />
     <h2>Search by title only:</h2>
+    <p>Includes collection and series titles.</p>
     <!--SEARCH TITLE-->
     <!--Search Stuff-->
     <form asp-action="SearchTitle" method="get">
