--- a/Views/Home/SearchResults.cshtml
+++ b/Views/Home/SearchResults.cshtml
@@ -1,11 +1,12 @@
 ﻿@model List<MeiFile>
-
+<br />
 <h2>Search Results</h2>
 
 <!-- Add the back button -->
-<div style="margin-top: 20px;">
+<div style="margin-top: 20px; margin-left: 20px;">
     <button onclick="history.back()" class="btn btn-secondary">Back</button>
 </div>
+<br />
 
 @if (Model.Count == 0)
 {
