changed color and redid order of rows

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <body>
     <br />
-    <h2 style="color: slategrey;">Search the Database:</h2>
+    <h2 style="color: #0f0c49;">Search the Database:</h2>
 
     <!--Search Form-->
     <form asp-action="SearchAdvanced" method="get">
