--- a/Views/Home/DisplayFile.cshtml
+++ b/Views/Home/DisplayFile.cshtml
@@ -115,35 +115,35 @@
         // Extract metadata with consideration for attributes and exclude certain types
         var metadata = {
             "Title(s)": extractMetadataTag(meiDoc, "title", null, null, "collection"),  // Exclude collection titles
-            "Text Incipit(s)": extractMetadataTag(meiDoc, "incipText"),
+            "Clé du caveau Number": extractMetadataTag(meiDoc, "notes", "type", "CdC Number"),
+            "RISM ID": extractMetadataTag(meiDoc, "idno", "type", "RISM"),
             "Composer": extractMetadataTag(meiDoc, "composer"),
             "Arranger": extractMetadataTag(meiDoc, "arranger"),
             "Librettist": extractMetadataTag(meiDoc, "librettist"),
-            "Collection Editor": extractMetadataTag(meiDoc, "editor", "type", "collection"),
-            "Musical Source": extractMetadataTag(meiDoc, "notes", "type", "musical sourve"), //Exclude CdC Number
-            "Collection Title": extractMetadataTag(meiDoc, "title", "type", "collection"),
-            "Collection Number": extractMetadataTag(meiDoc, "collection", "type", "number"),
-            "Clé du caveau Number": extractMetadataTag(meiDoc, "notes", "type", "CdC Number"),
-            "CdC tableau": extractMetadataTag(meiDoc, "notes", "type", "CdC tableau"),
-            "CdC tableau division": extractMetadataTag(meiDoc, "notes", "type", "CdC tableau division"),
-            "Publisher": extractMetadataTag(meiDoc, "publisher"),
-            "Place of Publication": extractMetadataTag(meiDoc, "pubPlace"),
-            "Publication Date": extractMetadataTag(meiDoc, "date", "type", "publication"),
-            "Edition": extractMetadataTag(meiDoc, "edition"),
+            "Original Musical Source": extractMetadataTag(meiDoc, "notes", "type", "musical sourve"), //Exclude CdC Number
+            "Text Incipit(s)": extractMetadataTag(meiDoc, "incipText"),
             "Source Type": extractMetadataTag(meiDoc, "media"),
-            "Series Title": extractMetadataTag(meiDoc, "title", "type", "series"),
-            "Series Editor": extractMetadataTag(meiDoc, "editor", "type", "series"),
-            "Series Number": extractMetadataTag(meiDoc, "number", "type", "series"),
-            "Publisher Plate Number": extractMetadataTag(meiDoc, "plateNum"),
             "Manuscript Library Location": extractMetadataTag(meiDoc, "library"),
             "Manuscript Classmark": extractMetadataTag(meiDoc, "classmark"),
-            "RISM ID": extractMetadataTag(meiDoc, "idno", "type", "RISM"),
+            "Collection Title": extractMetadataTag(meiDoc, "title", "type", "collection"),
+            "Collection Number": extractMetadataTag(meiDoc, "collection", "type", "number"),
+            "Collection Editor": extractMetadataTag(meiDoc, "editor", "type", "collection"),
+            "Series Title": extractMetadataTag(meiDoc, "title", "type", "series"),
+            "Series Number": extractMetadataTag(meiDoc, "number", "type", "series"),
+            "Series Editor": extractMetadataTag(meiDoc, "editor", "type", "series"),
+            "Place of Publication": extractMetadataTag(meiDoc, "pubPlace"),
+            "Publisher": extractMetadataTag(meiDoc, "publisher"),
+            "Publication Date": extractMetadataTag(meiDoc, "date", "type", "publication"),
+            "Edition": extractMetadataTag(meiDoc, "edition"),
+            "Publisher Plate Number": extractMetadataTag(meiDoc, "plateNum"),
+            "CdC tableau": extractMetadataTag(meiDoc, "notes", "type", "CdC tableau"),
+            "CdC tableau division": extractMetadataTag(meiDoc, "notes", "type", "CdC tableau division"),
             "Musette division": extractMetadataTag(meiDoc, "notes", "type", "Musette division"),
             "Poetic Form": extractMetadataTag(meiDoc, "notes", "type", "poetic form"),
             "Poetic Form Associated Title": extractMetadataTag(meiDoc, "notes", "type", "poetic form associated title"),
             "Specific Rhyme Pattern": extractMetadataTag(meiDoc, "notes", "type", "specific rhyme pattern"),
             "Musical Form": extractMetadataTag(meiDoc, "notes", "type", "musical form"),
-            "Title by Musical Form": extractMetadataTag(meiDoc, "title", "type", "musical form"),
+            "Title by Musical Form": extractMetadataTag(meiDoc, "title", "type", "musical form"),            
             "Encoding Date": extractMetadataTag(meiDoc, "date", "type", "encoding-date"),
 
 
